# full-stack-mobile-robot-with-acceptable-intelligence

./: .gitignore  README.md  setup.sh
BIG_BRAIN/: setup.sh
BIG_BRAIN/src/robot/: package.xml  setup.py
BIG_BRAIN/src/robot/config/: amcl.yaml  controller.yaml  ekf.yaml  nav2.yaml  slam.yaml
BIG_BRAIN/src/robot/description/urdf/: inertia.urdf.xacro  mobile_robot.xacro  properties.urdf.xacro  ros2_control.urdf.xacro
BIG_BRAIN/src/robot/launch/: bringup.launch.py  controller.launch.py  hardware.launch.py  localization.launch.py  navigation.launch.py  rsp.launch.py
BIG_BRAIN/src/robot/map/: my_map.pgm  my_map.yaml
BIG_BRAIN/src/robot/robot/: imu_relay.py  umbmark.py
MICRO_ROS2/: Makefile  RTOS_PROJECT.ioc  setup.sh
MICRO_ROS2/Core/Inc/: stm32f4xx_it.h
MICRO_ROS2/Core/Inc/Controller/: imu.h  microros_app.h  motor.h
MICRO_ROS2/Core/Src/: freertos.c  main.c  stm32f4xx_it.c  tim.c  usart.c
MICRO_ROS2/Core/Src/Controller/: imu.c  microros_app.c  motor.c
